# TaiMusic

./: .gitignore  CLEANUP_SUMMARY.md  CORS_FIX.md  CORS_SOLUTION.md  CORS_VERIFICATION.md  LOGIN_REFRESH_FEATURE.md  README.md  SONG_URL_FIX.md  bun.lockb  index.html  package-lock.json  package.json  prebuild.js  start.js  tailwind.config.js  vite.config.ts
api/: package-lock.json
docs/: phone-login.md
kugou_api_service/: .env  package-lock.json  server.js  status.js
src/: AUDIO_PLAYER_INITIALIZATION_SUMMARY.md  App.css  App.tsx  CONFIRMATION_DIALOGS_REMOVAL_SUMMARY.md  FIRST_PLAY_FIX_USAGE.md  FIRST_PLAY_ISSUE_FIX.md  FULLSCREEN_PLAYER_IMPLEMENTATION_SUMMARY.md  PLAYBACK_STATE_CONTINUITY_FIX_SUMMARY.md  PLAYLIST_CLEAR_PLAYER_HIDE_SUMMARY.md  PROGRESS_TIMER_OPTIMIZATION_SUMMARY.md  SINGLE_SONG_PLAYMODE_OPTIMIZATION_SUMMARY.md  SONG_HIGHLIGHT_IMPLEMENTATION.md  SONG_HIGHLIGHT_SUMMARY.md  STARTUP_ISSUES_FIXED.md  debug.tsx  index.css  main.tsx  test-audio-player-initialization.md  test-play-functionality.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/module/: song_url.js
src-tauri/src/: lib.rs  main.rs  music_library.rs
src-tauri/src/assets/: server.js
src-tauri/util/: helper.js  index.js  request.js
src/components/: AudioPlayerDemo.tsx  AudioPlayerTester.tsx  CacheManager.tsx  CachedImage.tsx  DailyRecommendationItem.tsx  DailyRecommendations.tsx  DisclaimerModal.tsx  FullScreenPlayer.tsx  LoginModal.tsx  Player.tsx  PlaylistDrawer.tsx  PlaylistSongItem.tsx  SearchBar.tsx  SearchBarWithStore.tsx  SettingsModal.tsx  SideNavbar.tsx  SongHighlightDemo.tsx  Toast.tsx  UserDropdown.tsx  components.scss
src/config/: api.ts
src/constants/: images.ts  index.ts
src/examples/: CoverSizeExample.tsx
src/hooks/: useCurrentSongHighlight.ts
src/layouts/: MainLayout.tsx
src/pages/: HomePage.tsx  LibraryPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/services/: KugouMusicService.ts  MusicLibraryService.ts  index.ts  musicService.ts  uploadService.ts  userService.ts
src/store/: README.md  apiStore.ts  audioPlayerStore.ts  index.ts  musicStore.ts  playerStore.ts  searchStore.ts  toastStore.ts  types.ts  uiStore.ts  userStore.ts
src/styles/: SearchBar.css  global.scss  mixins.scss  variables.scss
src/utils/: api.ts  audioCacheManager.ts  audioPlayer.ts  audioPlayerDebugger.ts  colorExtractor.ts  corsTest.ts  coverAnimation.ts  (+5 more)
(+1 files in other folders)
